Final Commit Week 2 Day 4

--- a/BlogProject/BlogProject.csproj
+++ b/BlogProject/BlogProject.csproj
@@ -680,6 +680,8 @@
     <Content Include="Views\Categories\Edit.cshtml" />
     <Content Include="Views\Categories\Index.cshtml" />
     <Content Include="Views\BlogPosts\Unfinished.cshtml" />
+    <Content Include="Views\Account\ResendEmailConfirmation.cshtml" />
+    <Content Include="Views\Account\ConfirmationSent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
