--- a/BlogProject/BlogProject.csproj
+++ b/BlogProject/BlogProject.csproj
@@ -414,7 +414,10 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Avatar\250px-Jacebeleren.jpg" />
     <Content Include="Avatar\default-avatar.png" />
+    <Content Include="Avatar\flat,800x800,070,f.u4.jpg" />
+    <Content Include="Avatar\shadow.jpeg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
